--- a/argocd/application.yml
+++ b/argocd/application.yml
@@ -9,6 +9,8 @@ spec:
         repoURL: https://github.com/KhoiMaiDinh/ELearning_Infrastructure.git
         targetRevision: HEAD
         path: prod
+        directory:
+            recurse: true
     destination:
         server: https://kubernetes.default.svc
         namespace: nova-learn
