--- a/prod/infra/redpanda.svc.yml
+++ b/prod/infra/redpanda.svc.yml
@@ -3,10 +3,17 @@ kind: Service
 metadata:
     name: redpanda
     namespace: infra
+    labels:
+        app: redpanda
 spec:
+    type: ClusterIP
+    clusterIP: None
     selector:
         app: redpanda
     ports:
-        - protocol: TCP
+        - name: kafka
           port: 9092
           targetPort: 9092
+        - name: rpc
+          port: 33145
+          targetPort: 33145
