fix: error in docker tag syntax declatation

--- a/prod/ml/recommender.deploy.yml
+++ b/prod/ml/recommender.deploy.yml
@@ -16,7 +16,7 @@ spec:
             restartPolicy: Always
             containers:
                 - name: app-recommender
-                  image: khoimd/elearning-recommender@0.0.1
+                  image: khoimd/elearning-recommender:0.0.2
                   resources:
                       requests:
                           memory: "64Mi"
