--- a/prod/api/api.deployment.yml
+++ b/prod/api/api.deployment.yml
@@ -16,9 +16,9 @@ spec:
             restartPolicy: Always
             containers:
                 - name: app-api
-                  image: khoimd/elearning-api@0.0.2
+                  image: khoimd/elearning-api:0.0.2
                   resources:
-                      requests:
+                      requests:s
                           memory: "64Mi"
                           cpu: "50m"
                       limits:
