refactor: increase resources

--- a/prod/api/api.deployment.yml
+++ b/prod/api/api.deployment.yml
@@ -19,12 +19,11 @@ spec:
                   image: khoimd/elearning-api:0.0.1
                   resources:
                       requests:
-                          memory: "64Mi"
-                          cpu: "50m"
-                      limits:
-                          memory: "64Mi"
+                          memory: "128Mi"
                           cpu: "100m"
-
+                      limits:
+                          memory: "512Mi"
+                          cpu: "250"
                   env:
                       - name: NODE_ENV
                         valueFrom:
