--- a/prod/ml/absa.deploy.yml
+++ b/prod/ml/absa.deploy.yml
@@ -19,11 +19,11 @@ spec:
                   image: khoimd/elearning-asba:0.0.3
                   resources:
                       requests:
-                          memory: "64Mi"
-                          cpu: "50m"
-                      limits:
-                          memory: "64Mi"
+                          memory: "128Mi"
                           cpu: "100m"
+                      limits:
+                          memory: "512Mi"
+                          cpu: "250"
                   env:
                       - name: KAFKA_BOOTSTRAP_SERVERS
                         valueFrom:
