--- a/prod/ml/absa.config.yml
+++ b/prod/ml/absa.config.yml
@@ -4,7 +4,7 @@ metadata:
     name: absa-config
     namespace: ml
 data:
-    KAFKA_BOOTSTRAP_SERVERS: redpanda.infra.svc.cluster.local
+    KAFKA_BOOTSTRAP_SERVERS: redpanda.infra.svc.cluster.local:9092
     KAFKA_GROUP_ID: absa-consumer
     DEBUG: "false"
     PORT: "5000"
