--- a/prod/api/api-config.yml
+++ b/prod/api/api-config.yml
@@ -27,8 +27,8 @@ data:
     DATABASE_LOGGING: "false"
     DATABASE_SYNCHRONIZE: "true"
     DATABASE_MAX_CONNECTIONS: "100"
-    DATABASE_SSL_ENABLED: "true"
-    DATABASE_REJECT_UNAUTHORIZED: "false"
+    DATABASE_SSL_ENABLED: "false"
+    DATABASE_REJECT_UNAUTHORIZED: "true"
 ---
 apiVersion: v1
 kind: ConfigMap
