--- a/prod/ml/recommender.deploy.yml
+++ b/prod/ml/recommender.deploy.yml
@@ -20,7 +20,7 @@ spec:
                   resources:
                       requests:
                           memory: "128Mi"
-                          cpu: "200"
+                          cpu: "200m"
                       limits:
                           memory: "256Mi"
                           cpu: "250m"
