feat(k8s): add transcoder deployment and config for production

--- a/prod/namespace.yaml
+++ b/prod/namespace.yaml
@@ -6,6 +6,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+    name: transcode
+---
+apiVersion: v1
+kind: Namespace
+metadata:
     name: ml
 ---
 apiVersion: v1
