--- a/prod/transcode/transcoder.deploy.yml
+++ b/prod/transcode/transcoder.deploy.yml
@@ -150,29 +150,29 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-    name: clusterip-absa
-    namespace: ml
+    name: clusterip-transcoder
+    namespace: transcode
 spec:
     type: ClusterIP
     selector:
-        app: app-absa
+        app: app-transcoder
     ports:
         - name: http
           protocol: TCP
-          port: 5000
-          targetPort: 5000
+          port: 3001
+          targetPort: 3001
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: external-clusterip-absa
-    namespace: ml
+    name: external-clusterip-transcoder
+    namespace: transcode
     annotations:
         cloud.google.com/backend-config: '{"default": "health-check-backend-config"}'
 spec:
     type: ExternalName
-    externalName: clusterip-absa.ml.svc.cluster.local
+    externalName: clusterip-transcoder.ml.svc.cluster.local
     ports:
-        - name: app-absa
+        - name: app-transcoder
           protocol: TCP
-          port: 5000
+          port: 3001
