--- a/prod/ingress/ingress.yaml
+++ b/prod/ingress/ingress.yaml
@@ -8,13 +8,12 @@ metadata:
 spec:
     ingressClassName: nginx
     rules:
-        - host: 60c8-115-79-32-220.ngrok-free.app
-          http:
-              paths:
-                  - path: /
-                    pathType: Prefix
-                    backend:
-                        service:
-                            name: elearning-api
-                            port:
-                                number: 3000
+        http:
+            paths:
+                - path: /
+                  pathType: Prefix
+                  backend:
+                      service:
+                          name: external-clusterip-api
+                          port:
+                              number: 3000
