--- a/prod/transcode/transcoder.deploy.yml
+++ b/prod/transcode/transcoder.deploy.yml
@@ -171,7 +171,7 @@ metadata:
         cloud.google.com/backend-config: '{"default": "health-check-backend-config"}'
 spec:
     type: ExternalName
-    externalName: clusterip-transcoder.ml.svc.cluster.local
+    externalName: clusterip-transcoder.transcode.svc.cluster.local
     ports:
         - name: app-transcoder
           protocol: TCP
