--- a/prod/ingress/ingress.yaml
+++ b/prod/ingress/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
     ingressClassName: nginx
     rules:
-        - host: posts.com
+        - host: api-elearning.novalearn.id.vn
           http:
               paths:
                   - path: /
