--- a/prod/ingress/ingress.yaml
+++ b/prod/ingress/ingress.yaml
@@ -3,8 +3,14 @@ kind: Ingress
 metadata:
     name: elearning-ingress
     namespace: ingress
+    annotations:
+        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
     ingressClassName: nginx
+    tls:
+        - hosts:
+              - api-elearning.novalearn.id.vn
+          secretName: elearning-tls
     rules:
         - host: api-elearning.novalearn.id.vn
           http:
