--- a/prod/transcode/transcoder.deploy.yml
+++ b/prod/transcode/transcoder.deploy.yml
@@ -16,7 +16,7 @@ spec:
             restartPolicy: Always
             containers:
                 - name: app-transcoder
-                  image: khoimd/elearning-transcoder:0.0.11
+                  image: khoimd/elearning-transcoder:0.0.12
                   resources:
                       requests:
                           memory: "512Mi"
@@ -145,6 +145,13 @@ spec:
                             configMapKeyRef:
                                 name: transcoder-config
                                 key: STORAGE_PATH
+                  volumeMounts:
+                      - name: docker-socket
+                        mountPath: /var/run/docker.sock
+            volumes:
+                - name: docker-socket
+                  hostPath:
+                      path: /var/run/docker.sock
 
 ---
 apiVersion: v1
@@ -161,6 +168,7 @@ spec:
           protocol: TCP
           port: 3001
           targetPort: 3001
+
 ---
 apiVersion: v1
 kind: Service
