ci(transcoder): update config and image version

--- a/prod/transcode/transcoder.config.yml
+++ b/prod/transcode/transcoder.config.yml
@@ -25,3 +25,4 @@ data:
     STORAGE_BUCKET: novalearn-images
     STORAGE_URL_EXPIRES_IN: "1d"
     STORAGE_PATH: https://storage.googleapis.com
+    S3_ENDPOINT: https://storage.googleapis.com
