--- a/prod/transcode/transcoder.deploy.yml
+++ b/prod/transcode/transcoder.deploy.yml
@@ -145,6 +145,11 @@ spec:
                             configMapKeyRef:
                                 name: transcoder-config
                                 key: STORAGE_PATH
+                      - name: S3_ENDPOINT
+                        valueFrom:
+                            configMapKeyRef:
+                                name: transcoder-config
+                                key: S3_ENDPOINT
                   volumeMounts:
                       - name: docker-socket
                         mountPath: /var/run/docker.sock
