build(transcoder): update config and deploy files for S3 region support

--- a/prod/transcode/transcoder.config.yml
+++ b/prod/transcode/transcoder.config.yml
@@ -26,3 +26,4 @@ data:
     STORAGE_URL_EXPIRES_IN: "1d"
     STORAGE_PATH: https://storage.googleapis.com
     S3_ENDPOINT: https://storage.googleapis.com
+    S3_REGION: asia-southeast1
