--- a/prod/api/api-config.yml
+++ b/prod/api/api-config.yml
@@ -73,10 +73,11 @@ metadata:
 data:
     STORAGE_HOST: storage.googleapis.com
     STORAGE_PORT: "443"
-    STORAGE_USE_SSL: "true"
+    STORAGE_USE_SSL: "false"
     STORAGE_BUCKET: novalearn-images
     STORAGE_URL_EXPIRES_IN: "1d"
     STORAGE_PATH: https://storage.googleapis.com
+    STORAGE_REGION: auto
 ---
 apiVersion: v1
 kind: ConfigMap
