fix(api-config): change STORAGE_USE_SSL to true for secure connection

--- a/prod/api/api-config.yml
+++ b/prod/api/api-config.yml
@@ -73,7 +73,7 @@ metadata:
 data:
     STORAGE_HOST: storage.googleapis.com
     STORAGE_PORT: "443"
-    STORAGE_USE_SSL: "false"
+    STORAGE_USE_SSL: "true"
     STORAGE_BUCKET: novalearn-images
     STORAGE_URL_EXPIRES_IN: "1d"
     STORAGE_PATH: https://storage.googleapis.com
